# ChangeLog for x11-libs/qt-embedded
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Jul 2009; Håvard Wall <haavardw@ifi.uio.no> qt-embedded-4.4.3.ebuild:
  add ~amd64

  25 Jun 2009; Håvard Wall <haavardw@ifi.uio.no> ChangeLog:
  Fix bug 252088, don't strip before installation

*qt-embedded-3.3.8b (20 Jun 2009)

  20 Jun 2009; Håvard Wall <haavardw@ifi.uio.no>
  +qt-embedded-3.3.8b.ebuild:
  Compile on amd64 (needs eutils to successfully apply patch)

  14 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-embedded-4.4.3.ebuild:
  Ebuild clean up, code fixes for arm arch support

  02 Feb 2009; Markos Chandras (hwoarang) <hwoarang@silverarrow.gr>
  +x11-libs/qt-embedded/qt-embedded-4.4.3.ebuild:
  Initial Import for qt-embedded-4.4.3
