@@ -2,6 +2,6 @@ AUX qt-embedded-3.3.8-castfix.patch 5906 RMD160 a22c0f2ddf74ee5a9d8065edc2b0d748
 DIST qt-embedded-free-3.3.8b.tar.gz 23509416 RMD160 b68e016bedde89406fcff8bda5dfd32b24846fa0 SHA1 1f3643c9bdbc744f1746d38a72af3b6c23c83e93 SHA256 2b269c05a57cd6becc937aef92564484e0390d053e6361bc360e20bf969527ba
 DIST qt-embedded-linux-opensource-src-4.4.3.tar.gz 124238957 RMD160 3fdc725b247319670b9aa113180fce6c1413c89f SHA1 0b9c0d21ce7c083d0d982206f294f7a7de6377b6 SHA256 f405a616f84fe0abb06afe30b0b27283e5ac18e0e63c9c46a1c918a8204c4669
 EBUILD qt-embedded-3.3.8b.ebuild 5012 RMD160 773a8311c626b5271d2bd6bb487f5fdea1865908 SHA1 b242bbda168da7672158769ac5a117a67720d708 SHA256 1284a2808b3737dd77d532315134ad93dfc1d4f7b73fbdb523bf73d84fd69602
-EBUILD qt-embedded-4.4.3.ebuild 3730 RMD160 d17485b78248992f074c090bdf6f23793ad9641d SHA1 c35b33bcd0e8af5c53d7f667b9ef0fd28e338160 SHA256 af4c6abf56e9758dcfcb5314bb665bd2027a71ca938394026f275318ec46feb3
-MISC ChangeLog 792 RMD160 b80cd8c4880ba7ae872aa31205c6a2396c0dc4e4 SHA1 e3a554decc225d7b347b0a3bc1e18b66f2e801d7 SHA256 44fda768bc753a44cc307ff3e2de36a39cec97794c3013373fab8488577b6c64
-MISC metadata.xml 603 RMD160 f7023a9ca98b72bd087f23d29bf145f0cc3a2f84 SHA1 893f028c6f1925451a7252f8466f7a15263057b4 SHA256 d728b7dd10ee3769d069492c25c4b3aafed5f009a1d31992f514dee8675e4654
+EBUILD qt-embedded-4.4.3.ebuild 4352 RMD160 d38c1625691412f366c2888561a0026c3af3395d SHA1 3862515043a1772e63d33673bc01b77167f276df SHA256 efec3adc71031d669a41051e3791f5c42f31e82339fe6f685eb7bf786069d2c3
+MISC ChangeLog 893 RMD160 51271028c43bcc2fb8c9c3cff65e00c9828d498d SHA1 c299ae210ffda3ae77758c604a0ac8c48abd41f2 SHA256 a11f91322c780c9a8ece3c457f2f64e7f1eea87259a9564e67f42a8d73faad15
+MISC metadata.xml 676 RMD160 e6360506101093a8fb33cbe24623625a07c99d01 SHA1 d86c82b47303fdd34d89f5df5c02d7e09bb97e06 SHA256 c60ffef2b9016cd72ed6906a9f58b87265f1e7d4cc06081843539646016ebcec
